--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.15",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "jquery": "^3.6.4",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.55.0",
-    "swr": "^2.1.1"
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-devtools": "^3.7.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
