--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "jquery": "^3.6.4",
     "next": "^13.2.4",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-devtools": "^3.7.0",
+    "rgb-hex": "^4.0.1",
     "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
