--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-devtools": "^3.7.0",
