--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@
 # it is recommended for speed and efficiency that this program run on the same drive as your OS
 # but, videos can be located in another drive
 # in the example below, I have a `videos` folder in the `F` drive
-# uncomment the next line (remove the #) to register this change
 # VIDEOS_FOLDER_LOCATION=f:
+# the following line is the default if you want to throw your videos into the `public` folder in this repo
+VIDEOS_FOLDER_LOCATION=public/
