--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@
 # but, videos can be located in another drive
 # in the example below, I have a `videos` folder in the `F` drive
 # VIDEOS_FOLDER_LOCATION=f:
-# the following line is the default if you want to throw your videos folder into the `public` folder in this repo
+# the following line is the default if you want to throw your videos into the `public` folder in this repo
 VIDEOS_FOLDER_LOCATION=public/
