fix: try a heartbeat

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# use this to customize where your 'videos' folder is located (on a thumb drive for example)
+# rename this file to .env and use this to customize where your 'videos' folder is located (on a thumb drive for example)
 # it is recommended for speed and efficiency that this program run on the same drive as your OS
 # but, videos can be located in another drive
 # in the example below, I have a `videos` folder in the `F` drive
 # VIDEOS_FOLDER_LOCATION=f:
 # the following line is the default if you want to throw your videos into the `public` folder in this repo
-VIDEOS_FOLDER_LOCATION=d:\pinball\
+VIDEOS_FOLDER_LOCATION=public/
